airflowVK_DAG/logs/dag_id=dag_saver_v01/run_id=manual__2024-09-21T11:34:38.981862+00:00/task_id=insert_data/attempt=1.log
[2024-09-21T11:34:47.062+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T11:34:38.981862+00:00 [queued]>
[2024-09-21T11:34:47.072+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T11:34:38.981862+00:00 [queued]>
[2024-09-21T11:34:47.072+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T11:34:47.072+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2024-09-21T11:34:47.072+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T11:34:47.081+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-21 11:34:38.981862+00:00
[2024-09-21T11:34:47.086+0000] {standard_task_runner.py:55} INFO - Started process 9950 to run task
[2024-09-21T11:34:47.090+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_saver_v01', 'insert_data', 'manual__2024-09-21T11:34:38.981862+00:00', '--job-id', '64', '--raw', '--subdir', 'DAGS_FOLDER/dag_saver.py', '--cfg-path', '/tmp/tmpq8icfrik']
[2024-09-21T11:34:47.090+0000] {standard_task_runner.py:83} INFO - Job 64: Subtask insert_data
[2024-09-21T11:34:47.158+0000] {task_command.py:389} INFO - Running <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T11:34:38.981862+00:00 [running]> on host 16da3808dee2
[2024-09-21T11:34:47.344+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=<NAME>
AIRFLOW_CTX_DAG_ID=dag_saver_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-21T11:34:38.981862+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-21T11:34:38.981862+00:00
[2024-09-21T11:34:47.346+0000] {sql.py:253} INFO - Executing: 
            if not exist (select * from vk_group_posts where vk_post_id = 72120)
            begin
            insert into vk_group_posts (vk_group_link, vk_post_id, vk_post_text, vk_post_comments) 
                values (
                    'sportcast.online',
                    '72120',
                    'Перед стартом нового тура Английской премьер-лиги предлагаем ознакомиться с нашим новым роликом! 
 
После 4-х туров появились те игроки, которые не получают в чемпионате доверие тренерского штаба. Проще говоря, пока они чаще сидят "на банке", чем играют. 
 
Владимир Заводников изучил игровое время футболистов и составил для вас топ-7 игроков, которые на старте сезона стали запасными в своих командах, а вполне могли быть лидерами на поле. Давайте узнаем, кто же это? 
 
Смотри тура в VK:
https://vk.com/video-214218677_456243439

Смотри на YouTube:
 https://youtu.be/Eg-Wl0Bx3YE?si=8NypIlwrm8zphG12
 
Не забывайте, что Ваша оценка наших трудов очень нам важна. Ставьте лайки, делитесь видео с друзьями, пишите комментарии и подписывайтесь на канал. 
 
ПОДПИСАТЬСЯ НА НАШ ЮТУБ-КАНАЛ:
 https://youtube.com/@sportcaston?si=4XYxgDxv4GcIbGvQ',
                    ':так нуньес не заслуживает играть в старте вот и сидит на банке:'); 
            end
                    
            
[2024-09-21T11:34:47.352+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T11:34:47.490+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T11:34:47.500+0000] {sql.py:364} INFO - Running statement: 
            if not exist (select * from vk_group_posts where vk_post_id = 72120)
            begin
            insert into vk_group_posts (vk_group_link, vk_post_id, vk_post_text, vk_post_comments) 
                values (
                    'sportcast.online',
                    '72120',
                    'Перед стартом нового тура Английской премьер-лиги предлагаем ознакомиться с нашим новым роликом! 
 
После 4-х туров появились те игроки, которые не получают в чемпионате доверие тренерского штаба. Проще говоря, пока они чаще сидят "на банке", чем играют. 
 
Владимир Заводников изучил игровое время футболистов и составил для вас топ-7 игроков, которые на старте сезона стали запасными в своих командах, а вполне могли быть лидерами на поле. Давайте узнаем, кто же это? 
 
Смотри тура в VK:
https://vk.com/video-214218677_456243439

Смотри на YouTube:
 https://youtu.be/Eg-Wl0Bx3YE?si=8NypIlwrm8zphG12
 
Не забывайте, что Ваша оценка наших трудов очень нам важна. Ставьте лайки, делитесь видео с друзьями, пишите комментарии и подписывайтесь на канал. 
 
ПОДПИСАТЬСЯ НА НАШ ЮТУБ-КАНАЛ:
 https://youtube.com/@sportcaston?si=4XYxgDxv4GcIbGvQ',
                    ':так нуньес не заслуживает играть в старте вот и сидит на банке:'); 
            end
                    
            , parameters: None
[2024-09-21T11:34:47.502+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "if"
LINE 2:             if not exist (select * from vk_group_posts where...
                    ^

[2024-09-21T11:34:47.510+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_saver_v01, task_id=insert_data, execution_date=20240921T113438, start_date=20240921T113447, end_date=20240921T113447
[2024-09-21T11:34:47.520+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 64 for task insert_data (syntax error at or near "if"
LINE 2:             if not exist (select * from vk_group_posts where...
                    ^
; 9950)
[2024-09-21T11:34:47.558+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-21T11:34:47.578+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
